<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting"
            android:text="@string/setting"
            android:background="#00ffffff"/>
        
        <TextView
            android:id="@+id/test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:gravity="center"/>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/write"
            android:text="@string/add"
            android:background="#00ffffff"/>
        
    </LinearLayout>
        
<!-- 
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/list"
        android:text="@string/empty">
    </ListView>
-->

    <TextView
        android:id="@+id/textview_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_main" />

    <Button
        android:id="@+id/btn_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_read" />

    <Button
        android:id="@+id/btn_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_write" />
    
	<Button
        android:id="@+id/btn_issuer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_issuer1" />
	
	<Button
        android:id="@+id/btn_cashier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cashier1" />
	
	<Button
        android:id="@+id/btn_issuer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_issuer2" />
	
	<Button
        android:id="@+id/btn_cashier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cashier2" />
	
	<Button
        android:id="@+id/btn_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bonus" />
	
	<Button
        android:id="@+id/btn_testcase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_testcase" />

</LinearLayout>