<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="#00ffffff"
            android:id="@+id/TestCase_back"/>
        
	    <TextView
	        android:id="@+id/testcase_title"
	        android:textIsSelectable="true"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:gravity="center"
	        android:textSize="20sp"/>
	    
	    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"/>
	    
	</LinearLayout>    
	
	    
    <TextView
        android:id="@+id/testcase_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testcase_text" />
    
    <Button
        android:id="@+id/testcase_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testcase_start" />
	
	
</LinearLayout>