<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/classname"
        android:textSize="18sp"
        android:text="@string/empty"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <Button 
	        android:layout_width="0dp"
	    	android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:background="#00000000"
	        android:id="@+id/allow"
	        android:text="@string/allow"/>
	    
	    <Button 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:background="#00000000"
	        android:id="@+id/reject"
	        android:text="@string/reject"/>
    
    </LinearLayout>

    <CheckBox
        android:id="@+id/askable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>