<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="#00ffffff"
            android:id="@+id/back2"/>
        
	    <TextView
	        android:textIsSelectable="true"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:id="@+id/readndef"
	        android:text="@string/app_name"
	        android:gravity="center"
	        android:textSize="20sp"/>
	    
	    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"/>
	    
	</LinearLayout>    
	
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reading"
	        android:id="@+id/content"/>
	    
    </LinearLayout>
	
	
</LinearLayout>